--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,10 +29,6 @@ build:
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython                                 # [build_platform != target_platform]
-    - numpy                                  # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
@@ -52,7 +48,7 @@ requirements:
     - requests <3.0.0
     - pytz
     - pycryptodomex >=3.2,!=3.5.0,<4.0.0
-    - pyOpenSSL >=16.2.0,<21.0.0
+    - pyopenssl >=16.2.0,<21.0.0
     - cffi >=1.9,<2.0.0
     - cryptography >=2.5.0,<4.0.0
     - pyjwt <3.0.0
