--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  # neither on Windows 32-bit nor on s390x there is right now arrow support
+  # Neither on Windows 32-bit nor on s390x there is right now arrow support
   skip: true  # [win32 or s390x or py<36]
   script:
     - export SF_NO_COPY_ARROW_LIB=1              # [unix]
