--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,6 +42,7 @@ requirements:
     - arrow-cpp
     - cython
     - numpy
+    - pep517  # [osx and arm64] 
     - pip
     - pyarrow
     - python-build
