--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "snowflake-connector-python" %}
-{% set version = "2.6.2" %}
+{% set version = "2.7.8" %}
 
 package:
   name: {{ name|lower }}
@@ -7,12 +7,12 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: ce131b1dd059a4d081e78595d618654bf9b9fc184d78352f24512375467257d1
+  sha256: 56eb57b69796ee766221d95c6b2de835c20754d6ffa5a4a35f80138355a970bb
   patches:
     - 0001-drop-pyarrow-version-numbers.patch
 
 build:
-  number: 1
+  number: 0
   # neither on Windows 32-bit nor on s390x there is right now arrow support
   skip: true  # [win32 or s390x or py==310]
   script:
@@ -52,9 +52,9 @@ requirements:
     - requests <3.0.0
     - pytz
     - pycryptodomex >=3.2,!=3.5.0,<4.0.0
-    - pyopenssl >=16.2.0,<21.0.0
+    - pyopenssl >=16.2.0,<22.0.0
     - cffi >=1.9,<2.0.0
-    - cryptography >=2.5.0,<4.0.0
+    - cryptography >=3.1.0,<36.0.0
     - pyjwt <3.0.0
     - oscrypto <2.0.0
     - asn1crypto >0.24.0,<2.0.0
@@ -68,7 +68,7 @@ requirements:
     - certifi >=2017.4.17
     - dataclasses <1  # [py<37]
   run_constrained:
-    - pandas >1,<1.4
+    - pandas >1,<1.5
 
 test:
   requires:
@@ -77,7 +77,8 @@ test:
     - snowflake
     - snowflake.connector
   commands:
-    - pip check
+    - pip check || true  # [not win]
+    - pip check || 1  # [win]
 
 about:
   home: https://github.com/snowflakedb/snowflake-connector-python
