rearrange and update dependencies, remove debug info from patch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,8 +50,9 @@ requirements:
     - wheel
   run:
     - python
+    # the unpatched wheel build vendors arrow-cpp
+    # this recipe breaks that out
     - {{ pin_compatible('arrow-cpp', max_pin='x') }}
-    # While requests is vendored, we use regular requests to perform OCSP checks
     - asn1crypto >0.24.0,<2.0.0
     - cffi >=1.9,<2.0.0
     - cryptography >=3.1.0,<37.0.0
@@ -61,16 +62,12 @@ requirements:
     - pyjwt <3.0.0
     - pytz
     - requests <3.0.0
-    # A functioning pkg_resources.working_set.by_key and pkg_resources.Requirement is
-    # required. Python 3.6 was released at the end of 2016. setuptools 34.0.0 was released
-    # in early 2017, so we pick this version as a reasonably modern base.
     - setuptools >34.0.0
-    # requests requirements
-    - charset-normalizer ~=2.0.0
+    - charset-normalizer >=2,<3
     - idna >=2.5,<4
     - urllib3 >=1.21.1,<1.27
     - certifi >=2017.4.17
-    - typing_extensions >=4.3,<5
+    - typing-extensions >=4,<5
   run_constrained:
     - pandas >1,<1.5
     - {{ pin_compatible('pyarrow', max_pin='x') }}
