--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,6 +64,7 @@ requirements:
     - pyjwt <3.0.0
     - pytz
     - requests <3.0.0
+    - importlib-metadata # [py<38]
     - charset-normalizer >=2,<3
     - idna >=2.5,<4
     - urllib3 >=1.21.1,<1.27
