--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,9 +15,9 @@ source:
     - 0003-Remove-conflicting-Windows-macro.patch
 
 build:
-  number: 0
-  # no arrow support on win-32 or s390x
-  skip: true  # [win32 or s390x or py<38]
+  number: 1
+  # no arrow support on s390x
+  skip: true  # [s390x or py<38]
   script:
     - export SF_NO_COPY_ARROW_LIB=1              # [unix]
     - export SF_ARROW_LIBDIR="${PREFIX}/lib"     # [unix]
@@ -45,14 +45,14 @@ requirements:
     - pip
     - cython
     - arrow-cpp 10.0.1
-    - pyarrow  10.0.1
-    - numpy  {{ numpy }}
+    - pyarrow 10.0.1
+    - numpy {{ numpy }}
     - setuptools
     - wheel
   run:
     - python
     - packaging
-    - pyarrow  >=10.0.1,<10.1.0
+    - pyarrow >=10.0.1,<10.1.0
     - {{ pin_compatible('arrow-cpp', max_pin='x') }}
     - asn1crypto >0.24.0,<2.0.0
     - cffi >=1.9,<2.0.0
@@ -77,12 +77,12 @@ requirements:
     - keyring !=16.1.0,<25.0.0
 
 test:
-  requires:
-    - pip
   imports:
     - snowflake
     - snowflake.connector
     - snowflake.connector.arrow_iterator
+  requires:
+    - pip
   commands:
     - pip check
 
