--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
     - 0003-Remove-conflicting-Windows-macro.patch
 
 build:
-  number: 1
+  number: 2
   # no arrow support on s390x
   skip: true  # [s390x or py<38]
   script:
@@ -47,7 +47,7 @@ requirements:
     - arrow-cpp 10.0.1
     - pyarrow 10.0.1
     - numpy {{ numpy }}
-    - setuptools
+    - setuptools 68
     - wheel
   run:
     - python
