--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,4 +1,4 @@
-MACOSX_SDK_VERSION:        # [osx and arm64]
-  - 10.14                  # [osx and arm64]
-MACOSX_DEPLOYMENT_TARGET:  # [osx and arm64]
-  - 10.14                  # [osx and arm64]
+MACOSX_SDK_VERSION:        # [osx]
+  - 10.14                  # [osx]
+MACOSX_DEPLOYMENT_TARGET:  # [osx]
+  - 10.14                  # [osx]
