--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -68,7 +68,7 @@ requirements:
 
 {% set tests_to_deselect = "" %}
 # linux: deselect the following tests because file permissions 
-# will not be set correctly and with DID NOT RAISE PermissionError
+# will not be set correctly and fail with DID NOT RAISE PermissionError
 {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_cache.py::TestSFDictFileCache::test_read_only" %}        # [linux]
 {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_easy_logging.py::test_config_file_inaccessible_path" %}  # [linux]
 {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_put_get.py::test_put_error" %}                           # [linux]
