--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "snowflake-connector-python" %}
-{% set version = "3.12.0" %}
+{% set version = "3.12.1" %}
 
 package:
   name: {{ name|lower }}
@@ -8,10 +8,10 @@ package:
 source:
   # use GH release sources to use tests
   url: https://github.com/snowflakedb/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: bf461965a92a1281a642d24a60005228e12f9782b0a943a141142f94d5d3cbc2
+  sha256: 976f25a4f60714b7fe53778ac0872a69db1becb1d9a5271d7d691f225bdce1a1
   
 build:
-  number: 0
+  number: 100
   # s390x not needed for snowflake
   skip: true  # [s390x or py<38]
   script:
@@ -36,7 +36,7 @@ requirements:
     - python
     - asn1crypto >0.24.0,<2.0.0
     - cffi >=1.9,<2.0.0
-    - cryptography >=3.1.0,<43.0.0
+    - cryptography >=3.1.0
     - pyopenssl >=16.2.0,<25.0.0
     - pyjwt <3.0.0
     - pytz
