snowflake-connector-python 4.0.0  (#40)

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "snowflake-connector-python" %}
-{% set version = "3.18.0" %}
+{% set version = "4.0.0" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 source:
   # use GH release sources to use tests
   url: https://github.com/snowflakedb/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: b0a656784e05289bdf8ed6b8d4cb6d01b141c645c91f15a1a6840499febd986c
+  sha256: 130b9a7e32d5348c3bb1a6067e830f79bb9a08190d8b75cc7807437422648916
   
 build:
   number: 100
@@ -34,9 +34,6 @@ requirements:
   run:
     - python
     - asn1crypto >0.24.0,<2.0.0
-    - boto3 >=1.24
-    - botocore >=1.24
-    - cffi >=1.9,<2.0.0
     - cryptography >=3.1.0
     - pyopenssl >=22.0.0,<26.0.0
     - pyjwt <3.0.0
@@ -52,6 +49,9 @@ requirements:
     - sortedcontainers >=2.4.0
     - platformdirs >=2.6.0,<5.0.0
     - tomlkit
+    # Confirmed with Snowflake: Boto3/Botocore are optional only if SNOWFLAKE_NO_BOTO is set; otherwise mandatory.
+    - boto3 >=1.24
+    - botocore >=1.24
   run_constrained:
     - pandas >=2.1.2,<3.0.0
     - keyring >=23.1.0,<26.0.0
@@ -70,14 +70,6 @@ requirements:
 {% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_converter.py" %}
 
 {% set tests_to_deselect = "" %}
-# linux: deselect the following tests because file permissions will not be set correctly and fail with DID NOT RAISE PermissionError.
-#   >  with pytest.raises(PermissionError) as e:
-#   E: Failed: DID NOT RAISE <class 'PermissionError'>
-{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_cache.py::TestSFDictFileCache::test_read_only" %}  # [linux]
-{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_easy_logging.py::test_config_file_inaccessible_path" %}  # [linux]
-{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_put_get.py::test_put_error" %}  # [linux]
-{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_configmanager.py::test_warn_config_file_owner" %}  # [linux]
-{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_configmanager.py::test_log_debug_config_file_parent_dir_permissions" %}  # [linux]
 # AssertionError: $SRC_DIR/.wiremock does not exist
 {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_programmatic_access_token.py::test_valid_pat" %}
 {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_programmatic_access_token.py::test_invalid_pat" %}
@@ -143,6 +135,7 @@ test:
     - pip
     - pytest
     - numpy
+    - responses
   source_files:
     - test
     # ModuleNotFoundError: No module named 'check_no_native_http'
